yaml/InfluxDB/telegraf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  namespace: monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - telegraf
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: telegraf
          image: telegraf:1.30
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: telegraf-config
              mountPath: /etc/telegraf/telegraf.conf
              subPath: telegraf.conf
      volumes:
        - name: telegraf-config
          configMap:
            name: telegraf-config
